--- a/Sem2/OS/LauncherApp/app/src/main/res/layout/activity_main.xml
+++ b/Sem2/OS/LauncherApp/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,18 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <FrameLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/homeScreenImage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/ic_launcher_background"
+            android:scaleType="centerCrop"/>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
@@ -19,7 +26,7 @@
             android:layout_height="match_parent">
 
         </android.support.v4.view.ViewPager>
-    </LinearLayout>
+    </FrameLayout>
 
     <FrameLayout
         style="@style/Widget.Design.BottomSheet.Modal"
@@ -28,15 +35,38 @@
         android:layout_height="wrap_content"
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
-        <GridView
-            android:id="@+id/drawerGrid"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:numColumns="4"
-            android:stretchMode="columnWidth"
-            android:layout_gravity="center">
+            android:orientation="vertical">
 
-        </GridView>
+            <LinearLayout
+                android:id="@+id/topDrawerLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/settings"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@android:drawable/ic_menu_edit" />
+
+            </LinearLayout>
+
+            <GridView
+                android:id="@+id/drawerGrid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:numColumns="4"
+                android:stretchMode="columnWidth"
+                android:layout_gravity="center">
+
+            </GridView>
+
+        </LinearLayout>
+
+
 
     </FrameLayout>
 
