--- a/Sem2/OS/LauncherApp/app/src/main/res/layout/activity_main.xml
+++ b/Sem2/OS/LauncherApp/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/voiceButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="60dp"
+        android:src="@drawable/ic_keyboard_voice_black_24dp"/>
+
     <FrameLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
@@ -50,7 +58,9 @@
                     android:id="@+id/settings"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@android:drawable/ic_menu_edit" />
+                    android:src="@drawable/ic_settings_black_24dp" />
+
+
 
             </LinearLayout>
 
