--- a/Sem2/OS/LauncherApp/app/src/main/res/layout/activity_settings.xml
+++ b/Sem2/OS/LauncherApp/app/src/main/res/layout/activity_settings.xml
@@ -29,9 +29,12 @@
 
         <Button
             android:id="@+id/homeScreenButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Change Image"/>
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:text="Change Image"
+            android:textSize="15sp"
+            android:textColor="#FFFFFF"
+            android:background="@drawable/custom_button"/>
 
     </LinearLayout>
 
@@ -59,10 +62,29 @@
 
         <Button
             android:id="@+id/gridSizeButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Change Grid Size"/>
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:text="Change Grid Size"
+            android:textSize="15sp"
+            android:textColor="#FFFFFF"
+            android:background="@drawable/custom_button"/>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="20sp">
+
+        <Button
+            android:id="@+id/saveButton"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:text="Save Changes"
+            android:textSize="15sp"
+            android:textColor="#FFFFFF"
+            android:background="#239af6"/>
     </LinearLayout>
 
 </LinearLayout>
