--- a/Sem2/OS/LauncherApp/app/src/main/res/layout/item_app.xml
+++ b/Sem2/OS/LauncherApp/app/src/main/res/layout/item_app.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="5sp"
     android:id="@+id/layout">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10sp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginRight="10sp"
+        android:layout_marginTop="10sp"
         android:id="@+id/image"
         android:src="@mipmap/ic_launcher"
         />
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:text="App Name"
         android:id="@+id/label"
         android:textSize="12sp"
